[package]
name = "wl-crosshair"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "0.30.2"
wayland-protocols = { version = "0.30.0", features = ["client"] }
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }

log = { version = "0.4", optional = true }
tempfile = "3.2"
image = "0.25.1"
